--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@ opacity: 0; cursor: pointer;
 .window {
 /* 背景色の不透明度を動的に変更 */
 background: rgba(255, 255, 255, var(--win-opacity));
-backdrop-filter: blur(12px);
+/* 背景を活かすため、ぼかしを削除 */
+backdrop-filter: none;
 border-radius: 20px; padding: 20px; width: 100%; max-width: 320px;
 text-align: center; box-shadow: var(--shadow); border: 1px solid rgba(255, 255, 255, 0.6);
 height: 360px; display: flex; flex-direction: column; justify-content: space-between; box-sizing: border-box;
@@ -161,7 +162,8 @@ box-shadow: 0 4px 0 #ccc; display: flex; align-items: center; justify-content: c
 .slot-overlay { position: absolute; top: 40px; left: 0; width: 100%; height: 40px; pointer-events: none; border-top: 1px solid rgba(0,0,0,0.1);
 border-bottom: 1px solid rgba(0,0,0,0.1); background: rgba(0, 0, 0, 0.03); }
 
-.btn-main { width: 100%; margin-top: 10px; padding: 12px; background: rgba(74, 85, 104, 1); color: white; border: none; border-radius: 10px; font-family: inherit;
+.btn-main { width: 100%; margin-top: 10px; padding: 12px; background: rgba(74, 85, 104, 1); color: white; border: none; border-radius: 10px;
+font-family: inherit;
 font-size: 0.9rem; box-shadow: 0 4px 0 #222; cursor: pointer; position: relative; transition: transform 0.05s; }
 .btn-main:active { transform: translateY(4px); box-shadow: 0 0 0 #222; }
 
