--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@ height: 100dvh;
 width: 100vw;
 font-family: 'DotGothic16', sans-serif;
 color: var(--text-dark);
+/* 修正点：視認性向上のための袋文字エフェクト */
+text-shadow: 1px 1px 0 rgba(255,255,255,0.8), -1px -1px 0 rgba(255,255,255,0.8), 1px -1px 0 rgba(255,255,255,0.8), -1px 1px 0 rgba(255,255,255,0.8);
 overflow: hidden;
 position: fixed;
 top: 0; left: 0;
