--- a/index.html
+++ b/index.html
@@ -36,8 +36,6 @@ height: 100dvh;
 width: 100vw;
 font-family: 'DotGothic16', sans-serif;
 color: var(--text-dark);
-/* 修正点：視認性向上のための袋文字エフェクト */
-text-shadow: 1px 1px 0 rgba(255,255,255,0.8), -1px -1px 0 rgba(255,255,255,0.8), 1px -1px 0 rgba(255,255,255,0.8), -1px 1px 0 rgba(255,255,255,0.8);
 overflow: hidden;
 position: fixed;
 top: 0; left: 0;
@@ -87,6 +85,11 @@ cursor: pointer; font-size: 2.2rem; color: white; text-shadow: 0 2px 4px rgba(0,
 position: absolute; bottom: 60px; right: 0; background: var(--cloud-white);
 padding: 15px; border-radius: 15px; box-shadow: var(--shadow);
 display: none; backdrop-filter: blur(10px); width: 210px; border: 1px solid white;
+}
+
+/* 背景パネル内のテキストは袋文字を適用しない（そのまま維持） */
+.bg-panel * {
+text-shadow: none !important;
 }
 
 .color-dots { display: flex; gap: 8px; justify-content: center; margin-bottom: 10px; flex-wrap: wrap; }
@@ -140,6 +143,8 @@ border-radius: 20px; padding: 20px; width: 100%; max-width: 320px;
 text-align: center; box-shadow: var(--shadow); border: 1px solid rgba(255, 255, 255, 0.6);
 height: 360px; display: flex; flex-direction: column; justify-content: space-between; box-sizing: border-box;
 margin-top: env(safe-area-inset-top);
+/* 文字に袋文字効果を追加 */
+text-shadow: 1px 1px 0 #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 0px 1px 0 #fff, 0px -1px 0 #fff, 1px 0px 0 #fff, -1px 0px 0 #fff;
 }
 
 h2 { font-size: 1.0rem; margin-top: 0; margin-bottom: 10px; }
@@ -154,10 +159,10 @@ border: 1px solid #ddd; border-radius: 10px;
 padding: 4px 6px; font-size: 0.85rem; cursor: pointer;
 box-shadow: 0 4px 0 #ccc; display: flex; align-items: center; justify-content: center; min-height: 44px; position: relative;
 }
-.item-chip:active { transform: translateY(4px); box-shadow: 0 0 0 #ccc; background: var(--accent-orange); color: white; border-color: transparent; }
-.item-chip.selected { background: var(--accent-orange); color: white; border-color: transparent; box-shadow: 0 4px 0 #d47e4d; }
+.item-chip:active { transform: translateY(4px); box-shadow: 0 0 0 #ccc; background: var(--accent-orange); color: white; border-color: transparent; text-shadow: none; }
+.item-chip.selected { background: var(--accent-orange); color: white; border-color: transparent; box-shadow: 0 4px 0 #d47e4d; text-shadow: none; }
 
-.slot-container { position: relative; height: 120px; overflow: hidden; margin: 5px 0; background: rgba(0,0,0,0.05); border-radius: 12px; touch-action: none; }
+.slot-container { position: relative; height: 120px; overflow: hidden; margin: 5px 0; background: rgba(0,0,0,0.05); border-radius: 12px; touch-action: none; text-shadow: none; }
 .slot-reel { transition: transform 0.3s ease-out; }
 .slot-item { height: 40px; display: flex; align-items: center; justify-content: center; font-size: 0.95rem; color: #888; }
 .slot-item.active { color: var(--text-dark); font-weight: bold; font-size: 1.1rem; }
@@ -166,7 +171,7 @@ border-bottom: 1px solid rgba(0,0,0,0.1); background: rgba(0, 0, 0, 0.03); }
 
 .btn-main { width: 100%; margin-top: 10px; padding: 12px; background: rgba(74, 85, 104, 1); color: white; border: none; border-radius: 10px;
 font-family: inherit;
-font-size: 0.9rem; box-shadow: 0 4px 0 #222; cursor: pointer; position: relative; transition: transform 0.05s; }
+font-size: 0.9rem; box-shadow: 0 4px 0 #222; cursor: pointer; position: relative; transition: transform 0.05s; text-shadow: none; }
 .btn-main:active { transform: translateY(4px); box-shadow: 0 0 0 #222; }
 
 /* 修正点：決定ボタンの背景のみを透明にする */
@@ -177,13 +182,13 @@ border: 1px solid rgba(74, 85, 104, 0.2);
 
 .free-input-wrapper { display: flex; gap: 8px; width: 100%; margin-top: 8px; }
 .free-input, textarea { width: 100%; border: 1px solid #ddd; border-radius: 10px; padding: 10px; font-family: inherit; box-sizing: border-box; font-size: 0.85rem;
-outline: none; background: rgba(255,255,255, var(--win-opacity)); }
+outline: none; background: rgba(255,255,255, var(--win-opacity)); text-shadow: none; }
 
 .btn-dot-ok {
 width: 44px; height: 44px; background: rgba(103, 163, 139, 1); color: white;
 border: none; border-radius: 50%; font-family: inherit;
 box-shadow: 0 4px 0 #4a7a66; cursor: pointer; display: flex;
-align-items: center; justify-content: center; flex-shrink: 0; transition: transform 0.05s;
+align-items: center; justify-content: center; flex-shrink: 0; transition: transform 0.05s; text-shadow: none;
 }
 .btn-dot-ok:active { transform: translateY(4px); box-shadow: 0 0 0 #4a7a66; }
 
@@ -199,7 +204,7 @@ clip-path: polygon(0% 50%, 12.5% 50%, 12.5% 62.5%, 25% 62.5%, 25% 75%, 37.5% 75%
 }
 
 textarea { height: 80px; resize: none; margin-top: 8px; }
-#summary { font-size:0.8rem; text-align:left; background:rgba(0,0,0,0.05); padding:12px; border-radius:10px; overflow-y:auto; flex:1; margin-bottom:5px; line-height:1.5; }
+#summary { font-size:0.8rem; text-align:left; background:rgba(0,0,0,0.05); padding:12px; border-radius:10px; overflow-y:auto; flex:1; margin-bottom:5px; line-height:1.5; text-shadow: none; }
 
 .btn-main.success { background: var(--accent-green) !important; box-shadow: 0 4px 0 #4a7a66 !important; }
 
@@ -256,7 +261,7 @@ font-size: 0.75rem; display: flex; flex-direction: column; gap: 5px;
 <div class="viewport" id="viewport">
 <div class="card"><div class="window"><h2>だれと あそぶ？</h2><div class="inventory-grid"><div class="item-chip" onpointerup="quickSave(1, 'ひとり')">ひとり</div><div class="item-chip" onpointerup="quickSave(1, '彼女と2人')">彼女</div><div class="item-chip" onpointerup="quickSave(1, '友達(2-4人)')">友達</div> <div class="item-chip" onpointerup="quickSave(1, '友達(大人数)')">友達(大人数)</div><div class="item-chip" onpointerup="quickSave(1, '会社')">会社</div><div class="item-chip" onpointerup="quickSave(1, '家族')">家族</div></div><div class="free-input-wrapper"><input type="text" id="q1_free" class="free-input" placeholder="そのほか..." onkeydown="if(event.key==='Enter') save(1, this.value)"><button class="btn-dot-ok" onpointerup="save(1, document.getElementById('q1_free').value)"><div class="pixel-check"></div></button></div></div></div>
 <div class="card"><div class="window"><h2>なにを したい？</h2><div class="inventory-grid" id="q2_grid"><div class="item-chip" onpointerup="toggleItem(this, 'モーニング')">モーニング</div><div class="item-chip" onpointerup="toggleItem(this, 'ランチ')">ランチ</div><div class="item-chip" onpointerup="toggleItem(this, 'カフェ')">カフェ</div><div class="item-chip" onpointerup="toggleItem(this, 'ディナー')">ディナー</div><div class="item-chip" onpointerup="toggleItem(this, 'バータイム')">バータイム</div><div class="item-chip" onpointerup="toggleItem(this, '深夜')">深夜</div><div class="item-chip" onpointerup="toggleItem(this, 'パン')">パン</div><div class="item-chip" onpointerup="toggleItem(this, 'スイーツ')">スイーツ</div><div class="item-chip" onpointerup="toggleItem(this, '遊び')">遊び</div><div class="item-chip" onpointerup="toggleItem(this, 'のんびり')">のんびり</div></div><input type="text" id="q2_free" class="free-input" placeholder="そのほか入力..."><button class="btn-main" onpointerup="nextMulti()">これでいく！</button></div></div>
-<div class="card"><div class="window"><h2>どこへ むかう？</h2><div class="inventory-grid"><div class="item-chip" id="gps-btn" onpointerup="getPreciseLocation(3)">現在地</div><div class="item-chip" onpointerup="quickSave(3, '本通周辺')">本通周辺</div><div class="item-chip" onpointerup="quickSave(3, '広島駅')">広島駅</div><div class="item-chip" style="background: rgba(103, 163, 139, 0.1); border: 1px dashed var(--accent-green);"
+<div class="card"><div class="window"><h2>どこへ むかう？</h2><div class="inventory-grid"><div class="item-chip" id="gps-btn" onpointerup="getPreciseLocation(3)">現在地</div><div class="item-chip" onpointerup="quickSave(3, '本通周辺')">本通周辺</div><div class="item-chip" onpointerup="quickSave(3, '広島駅')')">広島駅</div><div class="item-chip" style="background: rgba(103, 163, 139, 0.1); border: 1px dashed var(--accent-green);"
 onpointerup="openMap(3)">地図を開く</div></div><div class="free-input-wrapper"><input type="text" id="q3_free" class="free-input" placeholder="場所・住所..." onkeydown="if(event.key==='Enter') save(3, this.value)"><button class="btn-dot-ok" onpointerup="save(3, document.getElementById('q3_free').value)"><div class="pixel-check"></div></button></div></div></div>
 <div class="card"><div class="window"><h2>いつ いく？</h2><div class="slot-container" id="slot4"><div class="slot-reel"></div><div class="slot-overlay"></div></div><div class="free-input-wrapper"><input type="text" id="q4_free" class="free-input" placeholder="自由指定..." onkeydown="if(event.key==='Enter') saveSlot(4)"><button class="btn-dot-ok" onpointerup="saveSlot(4)"><div class="pixel-check"></div></button></div></div></div>
 <div class="card"><div class="window"><h2>よさんは？</h2><div class="slot-container" id="slot5"><div class="slot-reel"></div><div class="slot-overlay"></div></div><button class="btn-main" onpointerup="saveSlot(5)">この予算で！</button></div></div>
